--- a/src/index.css
+++ b/src/index.css
@@ -118,16 +118,12 @@
 }
 
 @layer base {
-  * {
-    @apply rounded-lg m-0 p-0;
-  }
-  html {
-    @apply m-0 p-0 rounded-lg;
-  }
+  html,
   body {
-    @apply m-0 p-0 w-[400px] h-[400px] overflow-y-auto bg-background text-foreground rounded-lg;
+    @apply m-0 p-0 w-[400px] h-[400px] overflow-hidden bg-transparent;
   }
+
   #root {
-    @apply w-full h-full;
+    @apply w-full h-full rounded-2xl overflow-hidden;
   }
 }
